@@ -3,6 +3,7 @@ Akeeba Data Compliance 1.2.3
 
 + CLI tool to replay the audit log
 ~ Update path to cacert.pem
+~ Use Joomla's domain name when setting the cookie acceptance, er, cookie
 
 Akeeba Data Compliance 1.2.2
 ================================================================================
